--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,14 @@
 html, body {
     background-color: #221a0f;
-    color: #DC3958;
-    font-family: Arial, Helvetica, sans-serif;}
+    font-family: Arial, Helvetica, sans-serif;
+    color: #D3AF86;
+}
 
 #nav-container {
-        position: fixed;
+    position: fixed;
     top: 0;
     bottom: 0;
+    color: #DC3958;
 }
 
 #nav-container nav {
@@ -31,3 +33,18 @@ html, body {
     padding: 0;
     padding: 0 40px;
 }
+
+#page-content {
+    margin-left: 230px;
+    padding-left: 50px;
+    font-size: 1.5em;
+}
+
+h1 {
+    color: #DC3958;
+}
+
+
+
+
+
