--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,6 @@ h1, h2, h3, h4 {
     top: 0;
     bottom: 0;
 }
-
 #nav-container nav {
     height: 100%;
 
@@ -30,7 +29,6 @@ h1, h2, h3, h4 {
     flex-direction: row;
     border-right: 2px solid #4a3d2c;
 }
-
 #nav-container nav ul {
     font-size: 30px;
     text-align: center;
@@ -53,34 +51,45 @@ h1, h2, h3, h4 {
     display: flex;
     flex-direction: row;
 }
-
 #experience-nav ul li {
     margin-top: 1em;
 }
-
 .experience-attribute-container {
     display: flex;
     flex-direction: row;
     gap: 40px;
 }
-
-#experience-information {
-    margin-left: 20px;
-}
-
 #experience-container .experience-attribute {
     color: #F79A32;
     font-style: italic;
 }
-
 #experience-content {
     margin-left: 40px;
 }
-
 #experience-container #experience-description {
     margin-top: 20px;
 }
 
+.skill {
+    background-color: #362712;
+    box-sizing: border-box;
+    margin: 32px 0px;
+}
 
+.skill-progress-indicator {
+    padding: 12px 24px;
+    font-size: 3em;
+    background-color: #889B4A;
+    box-sizing: inherit;
+}
 
+#skills-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 65px;
+}
 
+.skills-list {
+    flex: 47.5%;
+}
