--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,8 @@ html, body {
     font-family: Arial, Helvetica, sans-serif;
     color: #D3AF86;
     font-size: 15px;
+    margin: 0;
+    padding: 0;
 }
 
 nav ul {
